JSExecutor: better V8 Context handling, workaround for GC issue in JSServletExecutor, add support for arguments to WebFilterFactory/WebFilterExtensionPoint

--- a/webui/SystemInformation/bundle/webapp/index.html
+++ b/webui/SystemInformation/bundle/webapp/index.html
@@ -51,31 +51,31 @@
             <table class="list" cellspacing="0" cellpadding="0">
               <tbody>
                 <tr class="even">
-                  <td>System Name</td>
+                  <th>System Name</th>
                   <td>{{sysinfo.nodeName}}</td>
                 </tr>
                 <tr class="odd">
-                  <td>System ID</td>
+                  <th>System ID</th>
                   <td>{{sysinfo.nodeId}}</td>
                 </tr>
                 <tr class="even">
-                  <td>Operating System</td>
+                  <th>Operating System</th>
                   <td>{{sysinfo.osName}}</td>
                 </tr>
                 <tr class="odd">
-                  <td>System Version</td>
+                  <th>Operating System Version</th>
                   <td>{{sysinfo.osVersion}}</td>
                 </tr>
                 <tr class="even">
-                  <td>Architecture</td>
+                  <th>System Architecture</th>
                   <td>{{sysinfo.osArch}}</td>
                 </tr>
                 <tr class="odd">
-                  <td>Processor Cores</td>
+                  <th>Processor Cores</th>
                   <td>{{sysinfo.processorCount}}</td>
                 </tr>
                 <tr class="even">
-                  <td>System Local Date/Time</td>
+                  <th>System Local Date/Time</th>
                   <td>{{sysinfo.dateTime}}</td>
                 </tr>
               </tbody>  
