--- a/webui/SystemInformation/bundle/webapp/index.html
+++ b/webui/SystemInformation/bundle/webapp/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>macchina.io System Information</title>
+    <title>macchina.io - System Information</title>
     <link rel="stylesheet" href="/css/macchina.css" type="text/css"/>
-    <link rel="stylesheet" href="/macchina/launcher/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css"/>
     <link rel="icon" href="/images/favicon.ico">
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/angular/angular.min.js"></script>
@@ -17,7 +17,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/macchina_logo_small.png" alt="macchina.io"></a>&nbsp;&gt;&nbsp;System Information
+          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>System Information
           </h1>
         </div>
       </div>
@@ -27,14 +27,14 @@
         <nav>
           <div class="usernav">
             <div class="navigation">
-              <a href="#" ng-click="switchTab('sysinfo')" ng-class="{'navigation-active': isTab('sysinfo')}">System Information</a>
-              &nbsp;|&nbsp;
-              <a href="#" ng-click="switchTab('processes')" ng-class="{'navigation-active': isTab('processes')}">Processes</a>
-              &nbsp;|&nbsp;
-              <a href="#" ng-click="switchTab('memory')" ng-class="{'navigation-active': isTab('memory')}">Memory Usage</a>
+              <ul>
+                <li><a href="#" ng-click="switchTab('sysinfo')" ng-class="{'navigation-active': isTab('sysinfo')}">System Information</a></li>
+                <li><a href="#" ng-click="switchTab('processes')" ng-class="{'navigation-active': isTab('processes')}">Processes</a></li>
+                <li><a href="#" ng-click="switchTab('memory')" ng-class="{'navigation-active': isTab('memory')}">Memory Usage</a></li>
+              </ul>
             </div>
             <div class="username">
-              <img id="userIcon" src="/images/user.png" alt="Account">
+              <i class="fa fa-user"></i>
               &nbsp;
               {{session.username}}
               &nbsp;
