--- a/webui/Devices/bundle/webapp/index.html
+++ b/webui/Devices/bundle/webapp/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>macchina.io Sensors &amp; Devices</title>
+    <title>macchina.io - Sensors &amp; Devices</title>
     <link rel="stylesheet" href="/css/macchina.css" type="text/css"/>
-    <link rel="stylesheet" href="/macchina/launcher/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css"/>
     <link rel="icon" href="/images/favicon.ico">
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/angular/angular.min.js"></script>
@@ -17,7 +17,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/macchina_logo_small.png" alt="macchina.io"></a>&nbsp;&gt;&nbsp;Sensors &amp; Devices
+          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>Sensors &amp; Devices
           </h1>
         </div>
       </div>
@@ -29,7 +29,7 @@
             <div class="navigation">
             </div>
             <div class="username">
-              <img id="userIcon" src="/images/user.png" alt="Account">
+              <i class="fa fa-user"></i>
               &nbsp;
               {{session.username}}
               &nbsp;
