improved console scrolling behavior (scroll messages in div, not entire window)

--- a/webui/Console/bundle/webapp/index.html
+++ b/webui/Console/bundle/webapp/index.html
@@ -51,7 +51,7 @@
            <div style="clear: both;"></div>
          </div>
         </nav>
-        <div class="groupbox">
+        <div class="groupbox" id="messagesContainer">
           <pre id="messages"></pre>
         </div>
       </div>
