added high-res header logo for retina displays

--- a/webui/GNSSTracking/bundle/webapp/index.html
+++ b/webui/GNSSTracking/bundle/webapp/index.html
@@ -19,7 +19,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>GNSS Tracking
+          <a href="/"><img src="/images/headerlogo.png" srcset="/images/headerlogo-x2.png 2x" alt="macchina.io"></a>GNSS Tracking
           </h1>
         </div>
       </div>
