--- a/webui/Playground/bundle/webapp/index.html
+++ b/webui/Playground/bundle/webapp/index.html
@@ -20,7 +20,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>Playground
+          <a href="/"><img src="/images/headerlogo.png" srcset="/images/headerlogo-x2.png 2x" alt="macchina.io"></a>Playground
           </h1>
         </div>
       </div>
