--- a/webui/Devices/bundle/webapp/index.html
+++ b/webui/Devices/bundle/webapp/index.html
@@ -17,7 +17,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>Sensors &amp; Devices
+          <a href="/"><img src="/images/headerlogo.png" srcset="/images/headerlogo-x2.png 2x" alt="macchina.io"></a>Sensors &amp; Devices
           </h1>
         </div>
       </div>
