--- a/webui/Launcher/bundle/webapp/index.html
+++ b/webui/Launcher/bundle/webapp/index.html
@@ -18,7 +18,7 @@
       <div class="headercontainer">
         <div class="header">
           <h1>
-          <a href="/"><img src="/images/headerlogo.png" alt="macchina.io"></a>
+          <a href="/"><img src="/images/headerlogo.png" srcset="/images/headerlogo-x2.png 2x" alt="macchina.io"></a>
           </h1>
         </div>
       </div>
