--- a/samples/SensorLog/bundle/webapp/index.html
+++ b/samples/SensorLog/bundle/webapp/index.html
@@ -45,7 +45,7 @@
            <div style="clear: both;"></div>
          </div>
         </nav>
-        
+
         <div class="groupbox" ng-repeat="sensor in sensors">
           <div style="float: left; width: 210px; padding-right: 30px;">
             <p style="text-align: right; font-size: 20px;" ng-style="{'color': sensor.color}">
@@ -62,7 +62,9 @@
 			  <canvas ng-attr-id="{{'chartCanvas_' + sensor.index}}" style="height: 240px; display: block; width: 1033px;" width="1033" height="240"></canvas>
 		  </div>
         </div>
-
+		<div id="noSensors" ng-if="!haveSensors">
+          No sensors defined.
+        </div>
       </div>
     </div>
   </body>
