--- a/samples/SensorLog/bundle/webapp/index.html
+++ b/samples/SensorLog/bundle/webapp/index.html
@@ -51,14 +51,14 @@
         </div>
         <div class="groupbox" ng-repeat="sensor in sensors">
           <div style="float: left; width: 210px; padding-right: 30px;">
-            <p style="text-align: right; font-size: 20px;" ng-style="{'color': sensor.color}">
+            <p style="text-align: right; font-size: 20px; text-transform: capitalize;" ng-style="{'color': sensor.color}">
               {{sensor.title}}
             </p>
             <p style="text-align: right; font-size: 80px; line-height: 80px; margin-top: 36px;" ng-style="{'color': sensor.color}">
               {{sensor.value | number:1}}
             </p>
             <p style="text-align: right; font-size: 30px; line-height: 36px; margin-top: 0px;" ng-style="{'color': sensor.color}">
-              {{sensor.physicalUnit}}
+              {{sensor.displayUnit}}
             </p>
           </div>
 		  <div ng-attr-id="{{'chart_' + sensor.index}}" style="height: 240px; margin-left: 240px;">
