--- a/webui/GNSSTracking/bundle/webapp/index.html
+++ b/webui/GNSSTracking/bundle/webapp/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/css/macchina.css" type="text/css"/>
     <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="/macchina/gnss/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="/openlayers/css/ol.css">
     <link rel="icon" href="/images/favicon.ico">
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/angular/angular.min.js"></script>
     <script type="text/javascript" src="/macchina/gnss/js/app.js"></script>
     <script type="text/javascript" src="/macchina/gnss/js/controllers.js"></script>
-    <script type="text/javascript" src="/openlayers/OpenLayers.js"></script>
+    <script type="text/javascript" src="/openlayers/js/ol.js"></script>
   </head>
   <body ng-controller="SessionCtrl">
     <header>
